# pyright-polite

./: .gitignore  .justfile  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  hatch.toml  package-lock.json  package.json  pyproject.toml
.changelog.d/: 20230406_164104_jamielinux.md  20230407_091239_jamielinux.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/pyright_polite/: __about__.py  __init__.py  __main__.py  cli.py  main.py  platform.py  polite.py  pyright.py
tests/: conftest.py  test_cli.py  test_integration.py  test_main.py  test_polite.py  test_processlookuperror.py  test_traceback.py
tests/test_integration/: foo.py
